# graphity

./: .gitignore  Benchmark.html  Cargo.toml  ISLS_RustSpec_v1_0_0.tex  ISLS_ValidationHarness_v1_0_0.tex  LICENSE  README.md  full-report.html  isls extension phase5 1 v1 0 0.tex  isls extension phase7 v1 0 0.tex  isls extension phase8 v1 0 0.tex  isls extension phase9 v1 0 0.tex  isls extensions phase10 12 v1 0 0.tex  isls i5 spec.tex  isls m1 spec.tex  isls n1 spec.tex  isls_d2_spec.tex  isls_d3_spec.tex  isls_d4_spec.tex  isls_d5_spec.tex  isls_d6_spec (1).tex  isls_d6_spec.tex  isls_d7_spec.tex  isls_d8_spec.tex  isls_e1_pcr_hdag.tex  isls_extension_phase10_revised_v1_0_0.tex  isls_extension_phase10_v2_v1_0_0.tex  isls_extension_phase11_v1_0_0.tex  isls_extension_phase12_v1_0_0.tex  isls_extension_phase2_v1_0_0.tex  isls_extension_phase3_v1_0_0.tex  isls_extension_phase4_v1_0_0.tex  isls_extension_phase5_v1_0_0.tex  isls_extension_phase6_v1_0_0.tex  isls_extension_v1_0_0.tex  isls_f1_spec.tex  isls_final_spec.tex  isls_fullstack_spec.tex  isls_fulltest.bat  isls_genesis_crystal_v1_0_0.tex  (+17 more)
crates/isls-cli/: Cargo.toml
crates/isls-cli/src/: cmd_evolve.rs  cmd_harpoon.rs  cmd_metrics.rs  cmd_norms.rs  cmd_scrape.rs  cmd_spectroscopy.rs  main.rs
crates/isls-code-topo/: Cargo.toml
crates/isls-code-topo/src/: bridge.rs  lib.rs
crates/isls-forge-llm/: Cargo.toml
crates/isls-forge-llm/src/: artifact_collector.rs  blueprint.rs  codematrix.rs  forge.rs  gates.rs  hdag.rs  lib.rs  metrics.rs  mock.rs  oracle.rs  prompt.rs  staged_closure.rs  static_files.rs  structural.rs  type_context.rs
crates/isls-gateway/: Cargo.toml
crates/isls-gateway/src/: architect.rs  auto_evolve.rs  chat_handler.rs  discover.rs  lib.rs  session.rs  studio_auth.rs  targets.rs  timeseries.rs  ws.rs
crates/isls-gateway/src/static/: studio.html
crates/isls-merkaba/: Cargo.toml
crates/isls-merkaba/src/: chameleon.rs  konus.rs  lib.rs  monolith.rs  ophanim.rs  swarm_oracle.rs
crates/isls-norms/: Cargo.toml
crates/isls-norms/src/: anatomy.rs  catalog.rs  composition.rs  energy.rs  fitness.rs  genome.rs  groups.rs  injection.rs  learning.rs  lib.rs  optimizer.rs  relations.rs  spectroscopy.rs  targets.rs
crates/isls-reader/: Cargo.toml
crates/isls-reader/src/: go.rs  lib.rs  normalize.rs  python.rs  typescript.rs
crates/isls-types/: Cargo.toml
isls/: .gitignore  Cargo.toml  README.md  full-report.html  run_all_scenarios.bat  run_all_scenarios.sh
isls/crates/isls-agent/: Cargo.toml
isls/crates/isls-agent/src/: accumulation.rs  apply.rs  architecture.rs  conversation.rs  feature.rs  lib.rs  pipeline.rs  prompt.rs  stubs.rs  workspace.rs
isls/crates/isls-archive/: Cargo.toml
isls/crates/isls-archive/src/: lib.rs
isls/crates/isls-artifact-ir/: Cargo.toml
isls/crates/isls-artifact-ir/src/: lib.rs
isls/crates/isls-blueprint/: Cargo.toml
isls/crates/isls-blueprint/src/: lib.rs
isls/crates/isls-capsule/: Cargo.toml
isls/crates/isls-capsule/src/: lib.rs
isls/crates/isls-carrier/: Cargo.toml
isls/crates/isls-carrier/src/: lib.rs
isls/crates/isls-chat/: Cargo.toml
isls/crates/isls-chat/src/: lib.rs  norm_enrichment.rs
isls/crates/isls-cli/: Cargo.toml
isls/crates/isls-cli/src/: main.rs
isls/crates/isls-compose/: Cargo.toml
isls/crates/isls-compose/src/: lib.rs
isls/crates/isls-consensus/: Cargo.toml
isls/crates/isls-consensus/src/: lib.rs
isls/crates/isls-decomposer/: Cargo.toml
isls/crates/isls-decomposer/src/: lib.rs
isls/crates/isls-deployer/: Cargo.toml
isls/crates/isls-deployer/src/: lib.rs
isls/crates/isls-engine/: Cargo.toml
isls/crates/isls-engine/src/: lib.rs
isls/crates/isls-engine/tests/: acceptance.rs  smoke_test.rs
isls/crates/isls-extract/: Cargo.toml
isls/crates/isls-extract/src/: lib.rs
isls/crates/isls-forge/: Cargo.toml
isls/crates/isls-forge-llm/: Cargo.toml
isls/crates/isls-forge-llm/src/: forge.rs  hdag.rs  lib.rs  mock.rs  oracle.rs  order.rs  prompt.rs  provided.rs  staged_closure.rs  static_files.rs  structural.rs
isls/crates/isls-forge/src/: constraint_propagation.rs  lib.rs
isls/crates/isls-foundry/: Cargo.toml
isls/crates/isls-foundry/src/: correction.rs  lib.rs  scaffold.rs  toolchain.rs  validation.rs  workspace.rs
isls/crates/isls-gateway/: Cargo.toml
isls/crates/isls-gateway/src/: chat.rs  lib.rs
isls/crates/isls-harness/: Cargo.toml
isls/crates/isls-harness/src/: bench.rs  bench_generative.rs  extension_tests.rs  genesis.rs  iterate.rs  lib.rs  metrics.rs  report.rs  scale_tests.rs  store_tests.rs  synthetic.rs  topology_tests.rs  validate.rs
isls/crates/isls-hypercube/: Cargo.toml
isls/crates/isls-hypercube/src/: domain.rs  lib.rs  parser.rs
isls/crates/isls-integrator/: Cargo.toml
isls/crates/isls-integrator/src/: lib.rs
isls/crates/isls-langgen/: Cargo.toml
isls/crates/isls-langgen/src/: lib.rs
isls/crates/isls-learner/: Cargo.toml
isls/crates/isls-learner/src/: lib.rs
isls/crates/isls-manifest/: Cargo.toml
isls/crates/isls-manifest/src/: lib.rs
isls/crates/isls-morph/: Cargo.toml
isls/crates/isls-morph/src/: lib.rs
isls/crates/isls-multilang/: Cargo.toml
isls/crates/isls-multilang/src/: bridge.rs  codegen.rs  embed.rs  glyph_ir.rs  lib.rs  templates.rs
isls/crates/isls-navigator/: Cargo.toml
isls/crates/isls-navigator/src/: lib.rs
isls/crates/isls-norms/src/: catalog.rs  learning.rs  (+2 more)
isls/crates/isls-observe/: Cargo.toml
isls/crates/isls-oracle/: Cargo.toml
isls/crates/isls-orchestrator/: Cargo.toml
isls/crates/isls-persist/: Cargo.toml
isls/crates/isls-planner/: Cargo.toml
isls/crates/isls-pmhd/: Cargo.toml
isls/crates/isls-reader/: Cargo.toml
isls/crates/isls-registry/: Cargo.toml
isls/crates/isls-renderloop/: Cargo.toml
isls/crates/isls-scale/: Cargo.toml
isls/crates/isls-scheduler/: Cargo.toml
isls/crates/isls-store/: Cargo.toml
isls/crates/isls-swarm/: Cargo.toml
isls/crates/isls-templates/: Cargo.toml
isls/crates/isls-topology/: Cargo.toml
isls/crates/isls-types/: Cargo.toml
isls/examples/: ecommerce.toml  project.toml
(+60 files in other folders)
