[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
sha2 = "0.10"
petgraph = "0.6"
ordered-float = { version = "4", features = ["serde"] }
nalgebra = "0.33"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
