[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Sebastian Klemm"]
license = "MIT"
description = "ISLS — Intelligent Semantic Ledger Substrate"
keywords = ["ai", "formal-verification", "code-generation", "semantic-crystal"]
categories = ["development-tools", "science"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
sha2 = "0.10"
petgraph = "0.6"
ordered-float = { version = "4", features = ["serde"] }
nalgebra = "0.33"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
hkdf = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
tower = { version = "0.5", features = ["util"] }
