[package]
name = "isls-cli"
version = "1.0.0"
edition = "2021"
description = "ISLS single-binary operator interface — D1 Final Architecture (C11)"
authors = ["Sebastian Klemm"]
license = "MIT"

[[bin]]
name = "isls"
path = "src/main.rs"

[dependencies]
isls-forge-llm = { path = "../isls-forge-llm" }
isls-hypercube = { path = "../isls-hypercube" }
isls-gateway   = { path = "../isls-gateway" }
isls-chat      = { path = "../isls-chat" }
isls-norms     = { path = "../isls-norms" }
isls-reader    = { path = "../isls-reader" }
isls-code-topo = { path = "../isls-code-topo" }
isls-merkaba   = { path = "../isls-merkaba" }

serde_json = { workspace = true }
serde      = { workspace = true }
toml       = { workspace = true }
chrono     = { workspace = true }
dotenv = "0.15"
tokio  = { workspace = true }

[dev-dependencies]
