[package]
name = "isls-forge-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ISLS v3.1 — LLM-driven, compile-verified code generation engine"

[dependencies]
isls-hypercube   = { path = "../isls-hypercube" }
isls-norms       = { path = "../isls-norms" }
isls-reader      = { path = "../isls-reader" }
thiserror = { workspace = true }
tracing   = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
reqwest   = { workspace = true }
chrono    = { workspace = true }
sha2      = { workspace = true }
bcrypt    = "0.15"
regex     = "1"

[dev-dependencies]
tempfile = "3"
