[package]
name = "isls-gateway"
version = "1.0.0"
edition = "2021"
description = "ISLS Gateway — REST + WebSocket API and Studio web interface (C19)"
authors = ["Sebastian Klemm"]
license = "MIT"

[dependencies]
isls-norms = { path = "../isls-norms" }
isls-chat  = { path = "../isls-chat" }
isls-types = { path = "../isls-types" }
isls-agent = { path = "../isls-agent" }
isls-forge-llm = { path = "../isls-forge-llm" }
isls-hypercube = { path = "../isls-hypercube" }
isls-reader    = { path = "../isls-reader" }
isls-code-topo = { path = "../isls-code-topo" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
bcrypt = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
