[package]
name = "isls-norms"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Self-defining norm system for ISLS v3.0 — pure data types, no IO/async/network"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
chrono.workspace = true
thiserror.workspace = true
