[package]
name = "isls-reader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Multi-language source code reader (ported from Barbara codex-parse)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile = "3"
