[package]
name = "isls-types"
version = "1.0.0"
edition = "2021"
description = "Core shared types for ISLS: crystals, observations, temporal primitives"
authors = ["Sebastian Klemm"]
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
sha2 = { workspace = true }
ordered-float = { workspace = true }
chrono = { workspace = true }
