[package]
name = "isls-agent"
version = "1.0.0"
edition = "2021"
description = "C30 — Autonomous Goal-Directed Agent"
authors = ["Sebastian Klemm"]
license = "MIT"

[dependencies]
isls-types     = { path = "../isls-types" }
isls-norms     = { path = "../isls-norms" }
isls-chat      = { path = "../isls-chat" }
serde          = { workspace = true }
serde_json     = { workspace = true }

[features]
default = []
