[package]
name = "isls-archive"
version = "1.0.0"
edition = "2021"
description = "Crystal archival storage with hash-chained evidence verification"
authors = ["Sebastian Klemm"]
license = "MIT"

[dependencies]
isls-types = { path = "../isls-types" }
serde = { workspace = true }
thiserror = { workspace = true }
