[package]
name = "isls-artifact-ir"
version = "1.0.0"
edition = "2021"
description = "ISLS Artifact IR — C22: Universal Artifact Intermediate Representation"
authors = ["Sebastian Klemm"]
license = "MIT"

[dependencies]
isls-types = { path = "../isls-types" }
isls-pmhd  = { path = "../isls-pmhd" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
