[package]
name = "isls-capsule"
version = "1.0.0"
edition = "2021"
description = "ISLS Capsule Protocol — C14: evidence-bound secret release (OLP)"

[dependencies]
isls-types = { path = "../isls-types" }
isls-manifest = { path = "../isls-manifest" }
isls-registry = { path = "../isls-registry" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
isls-archive = { path = "../isls-archive" }
isls-types = { path = "../isls-types" }
