[package]
name = "isls-carrier"
version = "1.0.0"
edition = "2021"
description = "Information-geometric carrier with tubus coordinates and helix pairs"
authors = ["Sebastian Klemm"]
license = "MIT"

[dependencies]
isls-types = { path = "../isls-types" }
isls-consensus = { path = "../isls-consensus" }
serde = { workspace = true }
thiserror = { workspace = true }
