[package]
name = "isls-cli"
version = "1.0.0"
edition = "2021"
description = "ISLS single-binary operator interface — commands, dashboard, config (C11)"

[[bin]]
name = "isls"
path = "src/main.rs"

[dependencies]
isls-types = { path = "../isls-types" }
isls-engine = { path = "../isls-engine" }
isls-archive = { path = "../isls-archive" }
isls-persist = { path = "../isls-persist" }
isls-observe = { path = "../isls-observe" }
isls-harness = { path = "../isls-harness" }
isls-registry = { path = "../isls-registry" }
isls-manifest = { path = "../isls-manifest" }
isls-capsule = { path = "../isls-capsule" }
isls-scheduler = { path = "../isls-scheduler" }
isls-store = { path = "../isls-store" }
isls-topology = { path = "../isls-topology" }
isls-scale = { path = "../isls-scale" }
isls-oracle = { path = "../isls-oracle" }
isls-artifact-ir = { path = "../isls-artifact-ir" }
isls-forge = { path = "../isls-forge" }
isls-templates = { path = "../isls-templates" }
isls-compose = { path = "../isls-compose" }
isls-pmhd = { path = "../isls-pmhd" }
isls-gateway = { path = "../isls-gateway" }
isls-multilang = { path = "../isls-multilang" }

serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
