[package]
name = "isls-cli"
version = "1.0.0"
edition = "2021"
description = "ISLS single-binary operator interface — D1 Final Architecture (C11)"
authors = ["Sebastian Klemm"]
license = "MIT"

[[bin]]
name = "isls"
path = "src/main.rs"

[dependencies]
isls-forge-llm = { path = "../isls-forge-llm" }
isls-hypercube = { path = "../isls-hypercube" }
isls-gateway   = { path = "../isls-gateway" }

dotenv = "0.15"
tokio  = { workspace = true }

[dev-dependencies]
