[package]
name = "isls-compose"
version = "1.0.0"
edition = "2021"
description = "ISLS Compose — C24: Recursive Decomposition and Hierarchical Composition Engine"
authors = ["Sebastian Klemm"]
license = "MIT"

[dependencies]
isls-types       = { path = "../isls-types" }
isls-pmhd        = { path = "../isls-pmhd" }
isls-artifact-ir = { path = "../isls-artifact-ir" }
isls-forge       = { path = "../isls-forge" }
isls-scale       = { path = "../isls-scale" }
isls-store       = { path = "../isls-store" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
