[package]
name = "isls-decomposer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Recursive hypercube decomposition engine for ISLS v2"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
tera.workspace = true
isls-hypercube = { path = "../isls-hypercube" }
isls-blueprint = { path = "../isls-blueprint" }
isls-code-topo = { path = "../isls-code-topo" }
isls-orchestrator = { path = "../isls-orchestrator" }
isls-renderloop = { path = "../isls-renderloop" }
isls-forge-llm  = { path = "../isls-forge-llm" }
tracing         = { workspace = true }
