[package]
name = "isls-extract"
version = "1.0.0"
edition = "2021"
description = "Constraint extraction from persistent graph observations (L2)"
authors = ["Sebastian Klemm"]
license = "MIT"

[dependencies]
isls-types = { path = "../isls-types" }
isls-persist = { path = "../isls-persist" }
serde = { workspace = true }
thiserror = { workspace = true }
