[package]
name = "isls-forge"
version = "1.0.0"
edition = "2021"
description = "ISLS Forge — C23: Generative Synthesis Engine"
authors = ["Sebastian Klemm"]
license = "MIT"

[dependencies]
isls-types       = { path = "../isls-types" }
isls-pmhd        = { path = "../isls-pmhd" }
isls-artifact-ir = { path = "../isls-artifact-ir" }
isls-store       = { path = "../isls-store" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
# NOTE: isls-multilang cannot be a dep here (would create a cycle via isls-oracle).
# Multi-language generation is invoked at the CLI layer (cmd_forge_multilang in isls-cli)
# which composes isls-forge + isls-multilang directly. BabylonForge::check_ir() is
# available for callers that need H5 embedding validation before using ForgeEngine.
