[package]
name = "isls-gateway"
version = "1.0.0"
edition = "2021"
description = "ISLS Gateway — REST + WebSocket API and Studio web interface (C19)"
authors = ["Sebastian Klemm"]
license = "MIT"

[dependencies]
isls-norms = { path = "../isls-norms" }
isls-chat  = { path = "../isls-chat" }
isls-types = { path = "../isls-types" }
isls-navigator = { path = "../isls-navigator" }
isls-agent = { path = "../isls-agent" }
isls-oracle = { path = "../isls-oracle" }
isls-harness = { path = "../isls-harness" }
isls-archive = { path = "../isls-archive" }
isls-store = { path = "../isls-store" }
isls-forge = { path = "../isls-forge" }
isls-forge-llm = { path = "../isls-forge-llm" }
isls-renderloop = { path = "../isls-renderloop" }
isls-templates = { path = "../isls-templates" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
